made some changes to the user interface

--- a/css/login1.css
+++ b/css/login1.css
@@ -10,7 +10,7 @@ h1, h2, h3 {
   color: #fff; }
 
 .con {
-  background: url("../img/sea-1209607_1920.jpg");
+  background: url("../img/login-bg.jpg");
   height: 100vh;
   background-repeat: no-repeat;
   background-size: cover;
