--- a/css/login1.css
+++ b/css/login1.css
@@ -39,10 +39,11 @@ color: white;
   font-family: 'Didact Gothic', sans-serif;
   background-color: transparent;
   border: none;
-  border-bottom: 1px solid #969696;
-  color: #E0E0E0;
+  border-bottom: 1px solid white;
+  font-weight: 900;
+  color: white;
   text-align: center;
-  font-size: 16px;
+  font-size: 25px;
   margin: -25px 0 0 0px;
   padding: 10px 0px;
   width: 100%; 
